Process multiple forums in Moodle

--- a/snapp/popup.html
+++ b/snapp/popup.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>SNAPP</h1>
-    <button id="checkPage">Perform Social Network Analysis!</button>
+    <button id="checkPage">Extract SNA!</button>
+    <div id="status">Not Started</div>
   </body>
 </html>
